--- a/src/main/resources/templates/admin/visualizza/squadra.html
+++ b/src/main/resources/templates/admin/visualizza/squadra.html
@@ -10,7 +10,6 @@
 <body>
 
 	<h1>Dettagli Squadra</h1>
-
 	<div id="datiSquadra">
 		<div id="image">
 			<img src="/images/Squadra in formazione.png" />
@@ -62,13 +61,13 @@
 		</div>
 	</div>
 	<div id="riferimenti">
-		<div>
+		<div class="link">
 			<a th:href="@{/admin/squadre}">Torna all'elenco delle Squadre</a>
 		</div>
-		<div>
+		<div class="link">
 			<a th:href="@{/default}">Torna alla home amministratore</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
