--- a/src/main/resources/templates/user/visualizza/squadra.html
+++ b/src/main/resources/templates/user/visualizza/squadra.html
@@ -49,16 +49,14 @@
 		</table>
 	</div>
 
-	<div>
-
-		<div>
+	<div id="riferimenti">
+		<div class="link">
 			<a th:href="@{/user/squadre}">Torna all'elenco delle Squadre</a>
 		</div>
-
-		<div>
+		<div class="link">
 			<a th:href="@{/default}">Torna alla home utente</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
