--- a/src/main/resources/templates/user/elenchi/squadre.html
+++ b/src/main/resources/templates/user/elenchi/squadre.html
@@ -19,11 +19,11 @@
 			</tr>
 		</table>
 	</div>
-	<div>
-		<div>
+	<div id="riferimenti">
+		<div class="link">
 			<a href="/default">Torna alla home utente</a>
 		</div>
-		<div>
+		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
 		</div>
 	</div>
