Ultime modifiche Grafiche

--- a/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatore.html
+++ b/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatore.html
@@ -28,11 +28,11 @@
 
 	<div if="riferimenti">
 		<div class="link">
-			<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}">Torna alla Pagina del Giocatore</a>
+			<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}">Torna alla pagina del Giocatore</a>
 		</div>
 
 		<div id="link">
-			<a th:href="@{/default}">Torna alla Home</a>
+			<a th:href="@{/default}">Logout</a>
 		</div>
 
 	</div>
