--- a/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatoreConSuccesso.html
+++ b/src/main/resources/templates/admin/assegna/assegnaSquadraPerGiocatoreConSuccesso.html
@@ -18,7 +18,7 @@
 		</div>
 
 		<div id="link">
-			<a th:href="@{/default}">Torna alla Home</a>
+			<a th:href="@{/default}">Logout</a>
 		</div>
 	</div>
 
