--- a/src/main/resources/templates/admin/cancella/confermaCancellazioneGiocatore.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazioneGiocatore.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Cancella un giocatore</h1>
+	<h1>Cancella un Giocatore</h1>
 	<div>
 		<strong th:text="${giocatore.nome}">Raffaello</strong>
 		<strong th:text="${giocatore.cognome}">Sanzio</strong>
@@ -21,7 +21,7 @@
 	<table>
 		<tr>
 			<td class="button">
-				<strong>Confermi di voler cancellare questo giocatore ?</strong>
+				<strong>Confermi di voler cancellare questo Giocatore ?</strong>
 			</td>
 			<td class="button">
 				<div class="button">
@@ -35,13 +35,13 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/admin/giocatori}">Torna all'elenco dei Giocatori</a>
+			<a th:href="@{/admin/giocatori}">Torna all'Elenco dei Giocatori</a>
 		</div>
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
