--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazione.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Cancella una prestazione</h1>
+	<h1>Cancella una Prestazione</h1>
 
 	<table>
 		<tr>
@@ -27,10 +27,10 @@
 	<div id="riferimenti">
 
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
