--- a/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazionePrestazioneConSuccesso.html
@@ -12,10 +12,10 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
