--- a/src/main/resources/templates/admin/cancella/confermaCancellazioneSquadra.html
+++ b/src/main/resources/templates/admin/cancella/confermaCancellazioneSquadra.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Cancella una squadra</h1>
+	<h1>Cancella una Squadra</h1>
 	<div>
 		<strong th:text="${squadra.nome}">Borgorosso FC</strong>
 	</div>
@@ -18,7 +18,7 @@
 	<table>
 		<tr>
 			<td class="button">
-				<strong>Confermi di voler cancellare questa squadra ?</strong>
+				<strong>Confermi di voler cancellare questa Squadra ?</strong>
 			</td>
 			<td class="button">
 				<div class="button">
@@ -30,13 +30,13 @@
 	</table>
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/admin/squadre}">Torna all'elenco delle Squadre</a>
+			<a th:href="@{/admin/squadre}">Torna all'Elenco delle Squadre</a>
 		</div>
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
