--- a/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/admin/elenchi/giocatoriPreferiti.html
@@ -46,7 +46,7 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/default}">Torna alla Home</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 
 		<div id="link">
