--- a/src/main/resources/templates/admin/elenchi/prestazioni.html
+++ b/src/main/resources/templates/admin/elenchi/prestazioni.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-		<h1>Elenco prestazioni:</h1>
+		<h1>Elenco Prestazioni</h1>
 		<div id="container">
 			<table>
 				<tr>
@@ -47,10 +47,10 @@
 				<a th:href="@{'/admin/giocatore/' + ${giocatore.id}}">Torna alla pagina del Giocatore</a>
 			</div>
 			<div class="link">
-				<a href="/default">Torna alla home amministratore</a>
+				<a href="/default">Torna alla Home Amministratore</a>
 			</div>
 			<div id="link">
-				<a href="/">Torna alla pagina iniziale</a>
+				<a href="/">Logout</a>
 			</div>
 		</div>
 
