--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -16,7 +16,7 @@
 		</div>
 		
 		<div class="link">
-			<a th:href="@{/admin/giocatori}">Elenco giocatori</a>
+			<a th:href="@{/admin/giocatori}">Elenco Giocatori</a>
 		</div>
 		
 		<div class="link">
@@ -24,7 +24,7 @@
 		</div>
 		
 		<div class="link">
-			<a th:href="@{/admin/squadre}">Elenco squadre</a>
+			<a th:href="@{/admin/squadre}">Elenco Squadre</a>
 		</div>
 
 		<div class="link">
