--- a/src/main/resources/templates/user/confronta/confrontaGiocatori.html
+++ b/src/main/resources/templates/user/confronta/confrontaGiocatori.html
@@ -173,11 +173,11 @@
 		</div>
 
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home utente</a>
+			<a th:href="@{/default}">Torna alla Home</a>
 		</div>
 
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
