--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -12,11 +12,11 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/user/giocatori}">Elenco giocatori</a>
+			<a th:href="@{/user/giocatori}">Elenco Giocatori</a>
 		</div>
 
 		<div class="link">
-			<a th:href="@{/user/squadre}">Elenco squadre</a>
+			<a th:href="@{/user/squadre}">Elenco Squadre</a>
 		</div>
 
 		<div class="link">
@@ -28,7 +28,7 @@
 		</div>
 
 		<div class="link">
-			<a th:href="@{/user/giocatoriPreferiti}">I tuoi giocatori preferiti</a>
+			<a th:href="@{/user/giocatoriPreferiti}">I tuoi Giocatori preferiti</a>
 		</div>
 
 		<div id="link">
