--- a/src/main/resources/templates/user/visualizza/giocatore.html
+++ b/src/main/resources/templates/user/visualizza/giocatore.html
@@ -103,18 +103,18 @@
 		</div>
 
 		<div class="link">
-			<a th:href="@{'/user/prestazioni/' + ${giocatore.id}}">Visualizza le partite giocate</a>
+			<a th:href="@{'/user/prestazioni/' + ${giocatore.id}}">Visualizza le Partite giocate</a>
 		</div>
 
 		<div class="link">
-			<a th:href="@{/user/giocatori}">Torna all'elenco dei Giocatori</a>
+			<a th:href="@{/user/giocatori}">Torna all'Elenco dei Giocatori</a>
 		</div>
 
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home utente</a>
+			<a th:href="@{/default}">Torna alla Home</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
