--- a/src/main/resources/templates/user/visualizza/squadra.html
+++ b/src/main/resources/templates/user/visualizza/squadra.html
@@ -51,13 +51,13 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/user/squadre}">Torna all'elenco delle Squadre</a>
+			<a th:href="@{/user/squadre}">Torna all'Elenco delle Squadre</a>
 		</div>
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home utente</a>
+			<a th:href="@{/default}">Torna alla Home</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
