--- a/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoGiocatore.html
@@ -12,10 +12,10 @@
 	<h1>Il nuovo Giocatore è stato inserito con successo!</h1>
 	
 	<div>
-		<a th:href="@{/default}">Torna alla home amministratore</a>
+		<a th:href="@{/default}">Torna alla Home Amministratore</a>
 	</div>
 	<div id="link">
-		<a href="/">Torna alla pagina iniziale</a>
+		<a href="/">Logout</a>
 	</div>
 
 	<footer>
