--- a/src/main/resources/templates/admin/addSuccesso/inserimentoSquadra.html
+++ b/src/main/resources/templates/admin/addSuccesso/inserimentoSquadra.html
@@ -12,10 +12,10 @@
 	<h1>La nuova Squadra è stata inserita con successo!</h1>
 
 	<div>
-		<a th:href="@{/default}">Torna alla home amministratore</a>
+		<a th:href="@{/default}">Torna alla Home Amministratore</a>
 	</div>
 	<div id="link">
-		<a href="/">Torna alla pagina iniziale</a>
+		<a href="/">Logout</a>
 	</div>
 
 	<footer>
