--- a/src/main/resources/templates/admin/elenchi/giocatori.html
+++ b/src/main/resources/templates/admin/elenchi/giocatori.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Elenco giocatori</h1>
+	<h1>Elenco Giocatori</h1>
 	<div id="container">
 		<table>
 			<tr th:if="${giocatori.size > 0}">
@@ -51,13 +51,13 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a href="admin/giocatoreForm.html" th:href="@{/admin/giocatoreForm}">Inserisci un giocatore</a>
+			<a href="admin/giocatoreForm.html" th:href="@{/admin/giocatoreForm}">Inserisci un Giocatore</a>
 		</div>
 		<div class="link">
-			<a href="/default">Torna alla home amministratore</a>
+			<a href="/default">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
