--- a/src/main/resources/templates/admin/elenchi/squadre.html
+++ b/src/main/resources/templates/admin/elenchi/squadre.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Elenco squadre:</h1>
+	<h1>Elenco Squadre</h1>
 	<div id="container">
 		<table>
 			<tr th:if="${squadre.size > 0}">
@@ -36,13 +36,13 @@
 	</div>
 	<div id="riferimenti">
 		<div class="link">
-			<a href="admin/squadraForm.html" th:href="@{/admin/squadraForm}">Inserisci una squadra</a>
+			<a href="admin/squadraForm.html" th:href="@{/admin/squadraForm}">Inserisci una Squadra</a>
 		</div>
 		<div class="link">
-			<a href="/default">Torna alla home amministratore</a>
+			<a href="/default">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
