--- a/src/main/resources/templates/admin/form/giocatoreForm.html
+++ b/src/main/resources/templates/admin/form/giocatoreForm.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Inserisci un Nuovo Giocatore</h1>
+	<h1>Inserisci un nuovo Giocatore</h1>
 
 	<form th:action="@{/admin/giocatore}" method="POST" th:object="${giocatore}">
 
@@ -66,10 +66,10 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
