--- a/src/main/resources/templates/admin/form/squadraForm.html
+++ b/src/main/resources/templates/admin/form/squadraForm.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Inserisci una Nuova Squadra</h1>
+	<h1>Inserisci una nuova Squadra</h1>
 
 	<form th:action="@{/admin/squadra}" method="POST" th:object="${squadra}">
 
@@ -37,10 +37,10 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 	<footer>
