--- a/src/main/resources/templates/admin/rimuovi/rimuoviSquadraPerGiocatoreConSuccesso.html
+++ b/src/main/resources/templates/admin/rimuovi/rimuoviSquadraPerGiocatoreConSuccesso.html
@@ -15,8 +15,11 @@
 		<div class="link">
 			<a th:href="@{/admin/squadre}">Vai all'Elenco delle Squadre</a>
 		</div>
+		<div class="link">
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
+		</div>
 		<div id="link">
-			<a th:href="@{/default}">Torna alla Home</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
