--- a/src/main/resources/templates/admin/visualizza/prestazione.html
+++ b/src/main/resources/templates/admin/visualizza/prestazione.html
@@ -65,7 +65,10 @@
 	   
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{'/admin/giocatore/' + ${prestazione.giocatore.id}}">Torna alla Pagina del Giocatore</a>
+		</div>
+		<div class="link">
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
 			<a href="/">Torna alla pagina iniziale</a>
