--- a/src/main/resources/templates/admin/visualizza/squadra.html
+++ b/src/main/resources/templates/admin/visualizza/squadra.html
@@ -62,13 +62,13 @@
 	</div>
 	<div id="riferimenti">
 		<div class="link">
-			<a th:href="@{/admin/squadre}">Torna all'elenco delle Squadre</a>
+			<a th:href="@{/admin/squadre}">Torna all'Elenco delle Squadre</a>
 		</div>
 		<div class="link">
-			<a th:href="@{/default}">Torna alla home amministratore</a>
+			<a th:href="@{/default}">Torna alla Home Amministratore</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
