--- a/src/main/resources/templates/user/elenchi/giocatori.html
+++ b/src/main/resources/templates/user/elenchi/giocatori.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1>Elenco giocatori:</h1>
+	<h1>Elenco Giocatori</h1>
 	<div id="container">
 		<table>
 			<tr th:if="${giocatori.size > 0}">
@@ -38,10 +38,10 @@
 
 	<div id="riferimenti">
 		<div class="link">
-			<a href="/default">Torna alla home utente</a>
+			<a href="/default">Torna alla Home</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Torna alla Logout</a>
 		</div>
 	</div>
 
