--- a/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
+++ b/src/main/resources/templates/user/elenchi/giocatoriPreferiti.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div>
-		<h1>Elenco giocatori preferiti: </h1>
+		<h1>I tuoi Giocatori preferiti</h1>
 		<table>
 			<tr th:if="${giocatoriPreferiti.size > 0}">
 				<td><strong>Nome e Cognome</strong></td>
@@ -40,10 +40,10 @@
 	</div>
 	<div id="riferimenti">
 		<div class="link">
-			<a href="/default">Torna alla home utente</a>
+			<a href="/default">Torna alla Home</a>
 		</div>
 		<div id="link">
-			<a href="/">Torna alla pagina iniziale</a>
+			<a href="/">Logout</a>
 		</div>
 	</div>
 
