--- a/src/main/resources/templates/user/elenchi/prestazioni.html
+++ b/src/main/resources/templates/user/elenchi/prestazioni.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div>
-		<h1>Elenco prestazioni:</h1>
+		<h1>Elenco Prestazioni</h1>
 		<div id="container">
 			<table>
 				<tr>
@@ -37,10 +37,10 @@
 				<a th:href="@{'/user/giocatore/' + ${giocatore.id}}">Torna alla pagina del Giocatore</a>
 			</div>
 			<div class="link">
-				<a href="/default">Torna alla home utente</a>
+				<a href="/default">Torna alla Home</a>
 			</div>
 			<div id="link">
-				<a href="/">Torna alla pagina iniziale</a>
+				<a href="/">Logout</a>
 			</div>
 		</div>
 
