--- a/src/main/resources/templates/user/visualizza/prestazione.html
+++ b/src/main/resources/templates/user/visualizza/prestazione.html
@@ -66,10 +66,13 @@
 	<div>
 		<div id="riferimenti">
 			<div class="link">
-				<a th:href="@{/default}">Torna alla home utente</a>
+				<a th:href="@{'/user/giocatore/' + ${prestazione.giocatore.id}}">Torna alla Pagina del Giocatore</a>
+			</div>
+			<div class="link">
+				<a th:href="@{/default}">Torna alla Home</a>
 			</div>
 			<div id="link">
-				<a href="/">Torna alla pagina iniziale</a>
+				<a href="/">Logout</a>
 			</div>
 		</div>
 	</div>
