--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
-	<h1>Benvenuto in SIW Football Stats</h1>
-
-
+	<h1 id="intestazione_index">Benvenuto in <em>SIW Football Stats</em></h1>
+	<h3>Consulta le statistiche salienti del campionato, confronta i giocatori e trova i tuoi campioni preferiti!</h3>
+	<div id="image">
+		<img src="images/inizio.png"/>
+	</div>
+	<h4>Se sei un nuovo utente, registrati subito! Altrimenti accedi con le tue credenziali</h4>
 	<div id="riferimenti">
 		<div class="link">
 			<a th:href="@{/login}">Accedi all'Applicazione</a>
