--- a/src/main/resources/static/css/pagineDiServizio.css
+++ b/src/main/resources/static/css/pagineDiServizio.css
@@ -1,4 +1,16 @@
+#intestazione_index {
+	text-align: center;
+	border-bottom: none;
+	padding-bottom: 0px;
+}
+
 h1 {
+	text-align: center;
+	border-bottom: solid 3px black;
+	padding-bottom: 18px;
+}
+
+h3 {
 	text-align: center;
 	border-bottom: solid 3px black;
 	padding-bottom: 18px;
@@ -86,4 +98,12 @@ a:hover {
 	color: #0000FF;
 	background-color: #DEB887;
 	text-decoration: underline;
+}
+
+img {
+	width: 20%;
+}
+
+#image {
+	text-align: center;
 }
