--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 	<h1 id="intestazione_index">Benvenuto in <em>SIW Football Stats</em></h1>
 	<h3>Consulta le statistiche salienti del campionato, confronta i giocatori e trova i tuoi campioni preferiti!</h3>
 	<div id="image">
-		<img src="images/inizio.png"/>
+		<img src="images/Inizio.png"/>
 	</div>
 	<h4>Se sei un nuovo utente, registrati subito! Altrimenti accedi con le tue credenziali</h4>
 	<div id="riferimenti">
