--- a/src/main/resources/templates/user/visualizza/giocatore.html
+++ b/src/main/resources/templates/user/visualizza/giocatore.html
@@ -22,7 +22,7 @@
 			</div>
 
 			<div>
-				<strong><span th:text="*{giocatore.cognome}">Cognome</span></strong>
+				<strong th:text="*{giocatore.cognome}">Cognome</strong>
 			</div>
 
 			<div>
