--- a/src/main/resources/templates/user/visualizza/squadra.html
+++ b/src/main/resources/templates/user/visualizza/squadra.html
@@ -10,45 +10,47 @@
 <body>
 
 	<h1>Dettagli Squadra</h1>
+	<div id="datiSquadra">
+		<div id="image">
+			<img src="/images/Squadra in formazione.png" />
+		</div>
+		<div class="dati">
+			<div>
+				<strong th:text="*{squadra.nome}">Nome</strong>
+			</div>
 
-	    <div>
-		<div>
-			<span>Nome: </span><span th:text="*{squadra.nome}">Nome</span>
+			<div>
+				<em th:text="*{squadra.citta}">Prova</em>
+			</div>
+			   
 		</div>
 
-		<div>
-			<em>Sede: </em><em th:text="*{squadra.citta}">Prova</em>
-		</div>
-		   
-	</div>
-
-	<div>
 		Elenco dei Giocatori in Rosa:
+		<div id="datiGiocatori">
+			<table>
+				<tr th:if="${elencoGiocatori.size > 0}">
+					<td><strong>Nome e Cognome</strong></td>
+					<td><strong>Ruolo</strong></td>
+				</tr>
 
-		<table>
-			<tr th:if="${elencoGiocatori.size > 0}">
-				<td><strong>Nome e Cognome</strong></td>
-				<td><strong>Ruolo</strong></td>
-			</tr>
+				<tr th:unless="${elencoGiocatori.size > 0}">
+					<td><strong>NESSUN GIOCATORE IN ROSA</strong></td>
+				</tr>
+				<tr th:each="giocatore : ${elencoGiocatori}">
+					<td>
+						<a th:href="@{'/user/giocatore/' + ${giocatore.id}}"
+							th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Nome Cognome</a>
+					</td>
 
-			<tr th:unless="${elencoGiocatori.size > 0}">
-				<td><strong>NESSUN GIOCATORE IN ROSA</strong></td>
-			</tr>
-			<tr th:each="giocatore : ${elencoGiocatori}">
-				<td>
-					<a th:href="@{'/user/giocatore/' + ${giocatore.id}}"
-						th:text="${giocatore.nome} + ' ' + ${giocatore.cognome}">Nome Cognome</a>
-				</td>
+					<td>
+						<span th:text="${giocatore.ruolo}" />
+					</td>
 
-				<td>
-					<span th:text="${giocatore.ruolo}" />
-				</td>
+				</tr>
 
-			</tr>
-
-		</table>
+			</table>
+		</div>
 	</div>
-
 	<div id="riferimenti">
 		<div class="link">
 			<a th:href="@{/user/squadre}">Torna all'Elenco delle Squadre</a>
